tests/snapshots/examples_fixtures/type_system__failing__05_runtime_float_string_arg_via_any.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/05_runtime_float_string_arg_via_any.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `area`.

  examples/type_system/failing/05_runtime_float_string_arg_via_any.flx:45:6
   |
38 | fn area(radius: Float) -> Float {
   | ------------------------------- `area` expects `Float` as the 1st parameter
39 |     3.14159 * radius * radius
40 | }
... |
43 | 
44 | 
45 | area(dynamic)
   |      ^^^^^^^
   |      ------- this argument has type `String`

Note:
  expected argument type: Float
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Float` value as the 1st argument.
== stdout ==
<not executed>
